clapi_macros/test_suite/tests/ui/fail/invalid_option_value/invalid_option_arg.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_arg.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: option `arg` is expected to be string literal
